// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runtime works blog example should succeed: blog example should succeed 1`] = `undefined`;

exports[`runtime works blog-env example should not succeed: blog-env example should not succeed 1`] = `
[Error: error: Environment variable not found: SQLITE_URL.
  -->  schema.prisma:3
   | 
 2 |   provider = "sqlite"
 3 |   url      = env("SQLITE_URL")
   | 

Validation Error Count: 1]
`;

exports[`runtime works enums example should succeed: enums example should succeed 1`] = `undefined`;

exports[`runtime works missing-binary example should not succeed: missing-binary example should not succeed 1`] = `
[Error: 
Invalid invocation
Query engine binary for current platform "PLATFORM" could not be found.
This probably happens, because you built Prisma Client on a different platform.
(Prisma Client looked in xxx)

To solve this problem, add the platform "darwin" to the "generator" block in the "schema.prisma" file:
generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native"]
}

Then run "prisma2 generate" for your changes to take effect.
Read more about deploying Prisma Client: https://pris.ly/d/client-generator]
`;

exports[`runtime works missing-binary-native example should not succeed: missing-binary-native example should not succeed 1`] = `
[Error: 
Invalid invocation
Query engine binary for current platform "PLATFORM" could not be found.
This probably happens, because you built Prisma Client on a different platform.
(Prisma Client looked in xxx)

You already added the platform "native" to the "generator" block
in the "schema.prisma" file as described in https://pris.ly/d/client-generator,
but something went wrong. That's suboptimal.

Please create an issue at https://github.com/prisma/prisma-client-js/issues/new]
`;
